model trainer stage added

--- a/research/model_trainer.ipynb
+++ b/research/model_trainer.ipynb
@@ -159,11 +159,13 @@
     "\n",
     "    \n",
     "    def get_base_model(self):\n",
+    "        \"load the updated base model as we will finetune this\"\n",
     "        self.model = tf.keras.models.load_model(\n",
     "            self.config.updated_base_model_path\n",
     "        )\n",
     "\n",
     "    def train_valid_generator(self):\n",
+    "        \" training and validation\"\n",
     "\n",
     "        datagenerator_kwargs = dict(\n",
     "            rescale = 1./255,\n",
@@ -212,10 +214,9 @@
     "    def save_model(path: Path, model: tf.keras.Model):\n",
     "        model.save(path)\n",
     "\n",
-    "\n",
-    "\n",
     "    \n",
     "    def train(self):\n",
+    "        \"training the model\"\n",
     "        self.steps_per_epoch = self.train_generator.samples // self.train_generator.batch_size\n",
     "        self.validation_steps = self.valid_generator.samples // self.valid_generator.batch_size\n",
     "\n",
@@ -262,7 +263,9 @@
     "    training.train()\n",
     "    \n",
     "except Exception as e:\n",
-    "    raise e"
+    "    raise e\n",
+    "\n",
+    "# convert this as modular coding,update in config_entity.py first"
    ]
   },
   {
