added comments wherever it was necesssary

--- a/research/data_ingestion.ipynb
+++ b/research/data_ingestion.ipynb
@@ -73,7 +73,16 @@
     "    root_dir: Path\n",
     "    source_URL: str\n",
     "    local_data_file: Path\n",
-    "    unzip_dir: Path"
+    "    unzip_dir: Path\n",
+    "    \n",
+    "\n",
+    "'''\n",
+    "This is like creating a blueprint for your data ingestion process.\n",
+    "The @dataclass(frozen=True) means you're creating an immutable configuration - \n",
+    "once set, these values can't be changed,\n",
+    "which is great for preventing accidental modifications. \n",
+    "Think of it as a secure container for your data paths and URLs.\n",
+    "'''"
    ]
   },
   {
@@ -100,6 +109,17 @@
     "\n",
     "        self.config = read_yaml(config_filepath)\n",
     "        self.params = read_yaml(params_filepath)\n",
+    "        \n",
+    "        '''\n",
+    "        the above,\n",
+    "        \n",
+    "        This is your control center. It reads two YAML files:\n",
+    "\n",
+    "         A config file (containing paths, URLs, etc.)\n",
+    "         A params file (containing model parameters)\n",
+    "         The beauty of using YAML files is that you can modify your pipeline settings \n",
+    "         without touching the code.\n",
+    "        '''\n",
     "\n",
     "        create_directories([self.config.artifacts_root])\n",
     "\n",
@@ -107,8 +127,20 @@
     "    \n",
     "    def get_data_ingestion_config(self) -> DataIngestionConfig:\n",
     "        config = self.config.data_ingestion\n",
+    "        \n",
+    "        '''\n",
+    "        The above line is accessing a specific section of your YAML configuration file. \n",
+    "        Imagine your YAML file has different sections like chapters in a book - this line is specifically opening the \"data ingestion\" chapter. \n",
+    "        '''\n",
     "\n",
     "        create_directories([config.root_dir])\n",
+    "        \n",
+    "        ''' \n",
+    "        the above line ensures that the necessary directory structure exists. \n",
+    "        It's like making sure you have all the folders ready before downloading files. \n",
+    "        If the directories don't exist, they'll be created\n",
+    "        '''\n",
+    "    \n",
     "\n",
     "        data_ingestion_config = DataIngestionConfig(\n",
     "            root_dir=config.root_dir,\n",
@@ -118,6 +150,17 @@
     "        )\n",
     "\n",
     "        return data_ingestion_config\n",
+    "    \n",
+    "    '''\n",
+    "     This line creates a new instance of it, filling it with values from your YAML configuration. It's like taking all those loose configuration values and packaging them into a neat, type-safe container. The type hints in the original dataclass ensure that:\n",
+    "\n",
+    "     root_dir gets a proper Path object\n",
+    "     source_URL gets a string\n",
+    "     local_data_file gets a Path object\n",
+    "     unzip_dir gets a Path object\n",
+    "    \n",
+    "    \n",
+    "    '''\n",
     "      "
    ]
   },
@@ -141,12 +184,16 @@
    "outputs": [],
    "source": [
     "class DataIngestion:\n",
-    "    \"data ingestion class\"\n",
+    "    \"This is your workhorse class that actually handles the data. It has two main methods:\"\n",
     "    def __init__(self, config: DataIngestionConfig):\n",
     "        self.config = config\n",
     "\n",
     "    def download_file(self):\n",
-    "        \"download data from github URL\"\n",
+    "        '''\n",
+    "        This method is smart - it only downloads the file if it doesn't already exist locally. Think of it as a efficient delivery system \n",
+    "        that first checks if you already have what you need.\n",
+    "        '''\n",
+    "    \n",
     "        if not os.path.exists(self.config.local_data_file):\n",
     "            filename, headers = request.urlretrieve(\n",
     "                url = self.config.source_URL,\n",
