--- a/research/prepare_base_model.ipynb
+++ b/research/prepare_base_model.ipynb
@@ -124,6 +124,12 @@
     "\n",
     "\n",
     "    def get_prepare_base_model_config(self) -> PrepareBaseModelConfig:\n",
+    "        '''\n",
+    "        This first part extracts the base model configuration from your YAML file \n",
+    "        and ensures you have a directory to store your model files. \n",
+    "        Think of it like preparing a workspace before assembling a complex piece of machinery.\n",
+    "        \n",
+    "        '''\n",
     "        config = self.config.prepare_base_model\n",
     "        \n",
     "        create_directories([config.root_dir])\n",
@@ -139,7 +145,23 @@
     "            params_classes=self.params.CLASSES\n",
     "        )\n",
     "\n",
-    "        return prepare_base_model_config"
+    "        return prepare_base_model_config\n",
+    "    \n",
+    "    \n",
+    "    '''\n",
+    "    Explanation of the above code : \n",
+    "    \n",
+    "    root_dir: This is your workspace directory where all model-related files will be stored.\n",
+    "    base_model_path and updated_base_model_path: These are like \"before\" and \"after\" snapshots. The base_model_path is where your initial pre-trained model will be saved, and updated_base_model_path is where you'll save the model after modifying it for your specific task.\n",
+    "    params_image_size: This defines the dimensions your model expects for input images. If your model expects 224x224 pixel images, all your training images will need to match this size.\n",
+    "    params_learning_rate: This is like setting the \"cautiousness\" of your model during training. A higher learning rate means bigger adjustments during training, while a lower rate means more careful, smaller adjustments.\n",
+    "    params_include_top: This is a crucial flag that determines whether to include the classification layers of the original model. Setting this to False is common when you're adapting a pre-trained model for a new task.\n",
+    "    params_weights: This typically specifies whether to load pre-trained weights (like 'imagenet') or start from scratch.\n",
+    "    params_classes: This defines how many different categories your model needs to predict. In your case, this would be the number of different classifications in your chicken fecal image dataset.\n",
+    "\n",
+    "    The type hint -> PrepareBaseModelConfig ensures that this method always returns the correct type of configuration object, making your code more reliable and easier to debug.\n",
+    "    \n",
+    "    '''"
    ]
   },
   {
@@ -173,6 +195,16 @@
     "        )\n",
     "        # below we have written a function for saving the model,  using it here\n",
     "        self.save_model(path=self.config.base_model_path, model=self.model)\n",
+    "    \n",
+    "    '''\n",
+    "    Explanation of the above code : \n",
+    "    This method downloads VGG16, a powerful pre-trained model. Think of it like getting a skilled artist who has learned to recognize millions of images. The parameters are crucial:\n",
+    "\n",
+    "    input_shape tells the model what size images to expect\n",
+    "    weights='imagenet' loads pre-learned knowledge from millions of images\n",
+    "    include_top=False removes the original classification layers since you'll add your own\n",
+    "    \n",
+    "    '''\n",
     "\n",
     "\n",
     "    @staticmethod\n",
@@ -184,12 +216,29 @@
     "        elif (freeze_till is not None) and (freeze_till > 0):\n",
     "            for layer in model.layers[:-freeze_till]:\n",
     "                model.trainable = False\n",
+    "        \n",
+    "        '''\n",
+    "        Explanation of the above code : \n",
+    "        \n",
+    "        This part handles \"transfer learning\" by freezing layers. \n",
+    "        When you freeze a layer, you're telling that part of the model \"keep your knowledge,\n",
+    "        don't learn anything new.\" It's like telling an artist \"keep your understanding of basic shapes and colors, \n",
+    "        but we'll teach you specifically about chicken diseases.\"\n",
+    "        '''\n",
     "\n",
     "        flatten_in = tf.keras.layers.Flatten()(model.output)\n",
     "        prediction = tf.keras.layers.Dense(\n",
     "            units=classes,\n",
     "            activation=\"softmax\"\n",
     "        )(flatten_in)\n",
+    "        \n",
+    "        '''\n",
+    "        Explanation of the above code : \n",
+    "        This adds your custom classification head. The Flatten layer converts the complex image features into a simple format,\n",
+    "        and the Dense layer makes the final predictions for your specific classes.\n",
+    "        It's like adding a specialized chicken disease expert on top of the general artist's knowledge.\n",
+    "        \n",
+    "        '''\n",
     "\n",
     "        full_model = tf.keras.models.Model(\n",
     "            inputs=model.input,\n",
@@ -205,9 +254,24 @@
     "        full_model.summary()\n",
     "        return full_model\n",
     "    \n",
+    "    '''\n",
+    "    Explanation of the above code : \n",
+    "    \n",
+    "    This sets up how the model will learn:\n",
+    "\n",
+    "    SGD (Stochastic Gradient Descent) optimizer is like the model's learning strategy\n",
+    "    CategoricalCrossentropy loss helps the model understand how wrong its predictions are\n",
+    "    Accuracy metric tracks how well it's doing\n",
+    "    \n",
+    "    '''\n",
+    "    \n",
     "\n",
     "    def update_base_model(self):\n",
-    "        \"update the base model\"\n",
+    "        '''\n",
+    "        This creates your final model architecture, freezing all the VGG16 layers \n",
+    "        (freeze_all=True) \n",
+    "        and adding your custom classification layers for chicken disease identification.\n",
+    "        '''\n",
     "        self.full_model = self._prepare_full_model(\n",
     "            model=self.model,\n",
     "            classes=self.config.params_classes,\n",
