--- a/research/model_trainer.ipynb
+++ b/research/model_trainer.ipynb
@@ -112,6 +112,12 @@
     "\n",
     "\n",
     "    def get_training_config(self) -> TrainingConfig:\n",
+    "        '''\n",
+    "        In this first section, you're gathering all the necessary pieces of configuration. \n",
+    "        Think of it like getting all your ingredients ready before cooking:\n",
+    "        the training settings, the base model settings, and the general parameters are all pulled from your YAML files and stored in easy-to-use variables.\n",
+    "        \n",
+    "        '''\n",
     "        training = self.config.training\n",
     "        prepare_base_model = self.config.prepare_base_model\n",
     "        params = self.params\n",
@@ -119,6 +125,11 @@
     "        create_directories([\n",
     "            Path(training.root_dir)\n",
     "        ])\n",
+    "        '''\n",
+    "        Here, you're setting up your workspace. You're creating the path to your training data \n",
+    "        (combining the unzip directory path with the \"chickenfecalimages\" folder name) \n",
+    "        and ensuring your training directory exists\n",
+    "        '''\n",
     "\n",
     "        training_config = TrainingConfig(\n",
     "            root_dir=Path(training.root_dir),\n",
@@ -131,7 +142,20 @@
     "            params_image_size=params.IMAGE_SIZE\n",
     "        )\n",
     "\n",
-    "        return training_config"
+    "        return training_config\n",
+    "    \n",
+    "    '''\n",
+    "    This creates a comprehensive training configuration package. Let's understand each parameter:\n",
+    "\n",
+    "     root_dir: The main directory where training outputs will be saved\n",
+    "     trained_model_path: Where your final trained model will be saved\n",
+    "     updated_base_model_path: Where your modified base model is located (probably from a previous preparation step)\n",
+    "     training_data: Path to your dataset\n",
+    "     params_epochs: How many times to train over the entire dataset\n",
+    "     params_batch_size: How many images to process at once\n",
+    "     params_is_augmentation: Whether to use data augmentation (like flipping or rotating images)\n",
+    "     params_image_size: The size your images need to be for training\n",
+    "    '''"
    ]
   },
   {
@@ -163,9 +187,24 @@
     "        self.model = tf.keras.models.load_model(\n",
     "            self.config.updated_base_model_path\n",
     "        )\n",
+    "        \n",
+    "    '''\n",
+    "    the above 2 functions loads your pre-prepared base model, \n",
+    "    which will be fine-tuned during training. \n",
+    "    Think of it like getting a skilled artist (the pre-trained model)\n",
+    "    and then teaching them specifically about chicken fecal images.\n",
+    "    \n",
+    "    '''\n",
     "\n",
     "    def train_valid_generator(self):\n",
-    "        \" training and validation\"\n",
+    "        '''\n",
+    "        this method prepares your data \n",
+    "        \n",
+    "        datagenerator_kwargs your image data (converting pixel values from 0-255 to 0-1) \n",
+    "        and sets aside 20% of your data for validation. \n",
+    "        It's like preparing your test materials before teaching begins.\n",
+    "        \n",
+    "        '''\n",
     "\n",
     "        datagenerator_kwargs = dict(\n",
     "            rescale = 1./255,\n",
@@ -188,6 +227,15 @@
     "            shuffle=False,\n",
     "            **dataflow_kwargs\n",
     "        )\n",
+    "        \n",
+    "        '''\n",
+    "        The below code : \n",
+    "        When augmentation is enabled, it creates variations of your training images by \n",
+    "        rotating, flipping, and zooming. This helps your model learn to recognize images \n",
+    "        from different angles and positions - \n",
+    "        like teaching someone to recognize objects from multiple viewpoints.\n",
+    "        \n",
+    "        '''\n",
     "\n",
     "        if self.config.params_is_augmentation:\n",
     "            train_datagenerator = tf.keras.preprocessing.image.ImageDataGenerator(\n",
@@ -216,7 +264,12 @@
     "\n",
     "    \n",
     "    def train(self):\n",
-    "        \"training the model\"\n",
+    "        '''\n",
+    "        This is where the learning happens. \n",
+    "        The model processes batches of images repeatedly (epochs), adjusting its understanding with each pass. \n",
+    "        The steps_per_epoch calculation ensures we use all our training data efficiently.\n",
+    "        \n",
+    "        '''\n",
     "        self.steps_per_epoch = self.train_generator.samples // self.train_generator.batch_size\n",
     "        self.validation_steps = self.valid_generator.samples // self.valid_generator.batch_size\n",
     "\n",
@@ -229,6 +282,7 @@
     "        )\n",
     "\n",
     "        self.save_model(\n",
+    "            # This preserves your trained model so you can use it later for predictions.\n",
     "            path=self.config.trained_model_path,\n",
     "            model=self.model\n",
     "        )"
